--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">MyWeatherApp2</string>
     <string name="activity_main_text">Hello World:</string>
+    <string name="my_weather_app">My Weather App</string>
+    <string name="current_gps_location">Current Weather at GPS Location</string>
+    <string name="get_location">Update Location</string>
+    <string name="current_weather">Current Weather</string>
+    <string name="current_temp">Current Temp</string>
+    <string name="current_lon">Current Lon</string>
+    <string name="current_lat">Current Lat</string>
+    <string name="current_country">Current Country</string>
+    <string name="current_weather_desc">Current Weather Description</string>
 </resources>
