--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="current_lat">Current Lat</string>
     <string name="current_country">Current Country</string>
     <string name="current_weather_desc">Current Weather Description</string>
+    <string name="time_text" />
 </resources>
